fix centerin and sun icon mobile

--- a/portfolio/styles/skills.css
+++ b/portfolio/styles/skills.css
@@ -21,9 +21,18 @@
     width: 40px;
 }
 
-#sun {
-    height: 70px;
-    width: 70px;
+@media (max-width: 700px) {
+    #sun {
+        height: 40px;
+        width: 40px;
+    }
+}
+  
+@media (min-width: 701px){
+    #sun {
+        height: 70px;
+        width: 70px;
+    }
 }
 
 
